DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>