DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__FirstName__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__FirstName__c</fullName>
    <label>FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>