DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__InvitationPending__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__InvitationPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InvitationPending</label>
    <type>Checkbox</type>
</CustomField>