DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__IsPortalUser__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__IsPortalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPortalUser</label>
    <type>Checkbox</type>
</CustomField>