DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__LastName__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__LastName__c</fullName>
    <label>LastName</label>
    <type>TextArea</type>
</CustomField>