DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__Publish_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Publish_In_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish In Portal</label>
    <type>Checkbox</type>
</CustomField>