DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedCampaign__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedCampaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Recipient</relationshipLabel>
    <relationshipName>Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>