DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedContactName__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedContactName__c</fullName>
    <label>RelatedContactName</label>
    <length>180</length>
    <type>Text</type>
</CustomField>