DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedLead__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedLead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Recipient</relationshipLabel>
    <relationshipName>Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>