DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedObjectId__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedObjectId__c</fullName>
    <label>RelatedObjectId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>