DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recipient</relationshipLabel>
    <relationshipName>Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>