DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__RelatedUser__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__RelatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RelatedUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>