DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__Summary_Created__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__Summary_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summary_Created</label>
    <type>Checkbox</type>
</CustomField>