DigicielFull/force-app/main/default/objects/TIMBASURVEYS__Recipient__c/fields/TIMBASURVEYS__WhoId__c.field-meta.xml
<CustomField>
    <fullName>TIMBASURVEYS__WhoId__c</fullName>
    <label>WhoId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>